trabalho_pratico_lex/parser.output
Terminals unused in grammar

   IF
   ELSE
   DIVISION


State 44 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao
    3                 | declaracao_lista declaracao

    4 declaracao: func_declaracao
    5           | var_declaracao

    6 var_declaracao: tipo_especificador IDENTIFIER SEMICOLON
    7               | tipo_especificador IDENTIFIER arrayDimensao SEMICOLON
    8               | tipo_especificador SEMICOLON error
    9               | tipo_especificador IDENTIFIER LEFT_BRACKET error RIGHT_BRACKET SEMICOLON

   10 arrayDimensao: LEFT_BRACKET CONSTINT RIGHT_BRACKET arrayDimensao
   11              | LEFT_BRACKET CONSTINT RIGHT_BRACKET
   12              | LEFT_BRACKET error RIGHT_BRACKET

   13 tipo_especificador: INT
   14                   | FLOAT
   15                   | CHAR
   16                   | VOID
   17                   | STRUCT IDENTIFIER LEFT_BRACKET varDeclList RIGHT_BRACKET

   18 varDeclList: var_declaracao
   19            | var_declaracao varDeclList

   20 func_declaracao: tipo_especificador IDENTIFIER LEFT_PAREN params RIGHT_PAREN composto_decl
   21                | tipo_especificador error LEFT_PAREN params RIGHT_PAREN composto_decl
   22                | tipo_especificador IDENTIFIER LEFT_PAREN error RIGHT_PAREN composto_decl

   23 params: params_lista
   24       | VOID

   25 params_lista: param
   26             | param COMMA params_lista

   27 param: tipo_especificador IDENTIFIER
   28      | tipo_especificador IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   29      | tipo_especificador IDENTIFIER error RIGHT_BRACKET

   30 composto_decl: LEFT_BRACE local_declaracoes comando_lista RIGHT_BRACE

   31 local_declaracoes: local_declaracoes var_declaracao
   32                  | /* empty */

   33 comando_lista: comando comando_lista
   34              | /* empty */

   35 comando: expressao_decl
   36        | composto_decl
   37        | iteracao_decl
   38        | retorno_decl
   39        | error SEMICOLON

   40 expressao_decl: expressao SEMICOLON
   41               | SEMICOLON

   42 iteracao_decl: WHILE LEFT_PAREN expressao RIGHT_PAREN comando
   43              | WHILE LEFT_PAREN error RIGHT_PAREN comando

   44 retorno_decl: RETURN SEMICOLON
   45             | RETURN expressao SEMICOLON
   46             | RETURN error SEMICOLON

   47 expressao: var ASSIGN_OP expressao
   48          | expressao_simples

   49 expressao_simples: expressao_soma relacional expressao_soma
   50                  | expressao_soma

   51 relacional: LEFT_OP
   52           | RIGHT_OP
   53           | LESS_EQUAL_OP
   54           | RIGHT_EQUAL_OP
   55           | EQUAL_OP
   56           | NOT_EQUAL_OP

   57 expressao_soma: expressao_soma PLUS termo
   58               | error expressao_soma
   59               | termo

   60 termo: termo MULTIPLY fator
   61      | fator

   62 fator: LEFT_PAREN expressao RIGHT_PAREN
   63      | var
   64      | ativacao
   65      | CONSTINT
   66      | CONSTFLOAT
   67      | CONSTCHAR
   68      | CONSTSTRING
   69      | LEFT_PAREN error RIGHT_PAREN

   70 ativacao: IDENTIFIER LEFT_PAREN args RIGHT_PAREN
   71         | IDENTIFIER LEFT_PAREN error RIGHT_PAREN

   72 args: arg_lista
   73     | /* empty */

   74 arg_lista: expressao COMMA arg_lista
   75          | expressao

   76 var: IDENTIFIER
   77    | IDENTIFIER var_auxiliar

   78 var_auxiliar: LEFT_BRACKET expressao RIGHT_BRACKET
   79             | LEFT_BRACKET expressao RIGHT_BRACKET var_auxiliar
   80             | LEFT_BRACKET error RIGHT_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 12 21 22 29 39 43 46 58 69 71 80
IF (258)
ELSE (259)
WHILE (260) 42 43
RETURN (261) 44 45 46
INT (262) 13
FLOAT (263) 14
CHAR (264) 15
VOID (265) 16 24
STRUCT (266) 17
PLUS (267) 57
DIVISION (268)
EQUAL_OP (269) 55
NOT_EQUAL_OP (270) 56
LESS_EQUAL_OP (271) 53
RIGHT_EQUAL_OP (272) 54
LEFT_OP (273) 51
RIGHT_OP (274) 52
ASSIGN_OP (275) 47
LEFT_BRACE (276) 30
RIGHT_BRACE (277) 30
LEFT_BRACKET (278) 9 10 11 12 17 28 78 79 80
RIGHT_BRACKET (279) 9 10 11 12 17 28 29 78 79 80
LEFT_PAREN (280) 20 21 22 42 43 62 69 70 71
RIGHT_PAREN (281) 20 21 22 42 43 62 69 70 71
SEMICOLON (282) 6 7 8 9 39 40 41 44 45 46
COMMA (283) 26 74
CONSTINT (284) 10 11 65
CONSTFLOAT (285) 66
CONSTCHAR (286) 67
CONSTSTRING (287) 68
IDENTIFIER (288) 6 7 9 17 20 22 27 28 29 70 71 76 77
MULTIPLY (289) 60


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
programa (36)
    on left: 1, on right: 0
declaracao_lista (37)
    on left: 2 3, on right: 1 3
declaracao (38)
    on left: 4 5, on right: 2 3
var_declaracao (39)
    on left: 6 7 8 9, on right: 5 18 19 31
arrayDimensao (40)
    on left: 10 11 12, on right: 7 10
tipo_especificador (41)
    on left: 13 14 15 16 17, on right: 6 7 8 9 20 21 22 27 28 29
varDeclList (42)
    on left: 18 19, on right: 17 19
func_declaracao (43)
    on left: 20 21 22, on right: 4
params (44)
    on left: 23 24, on right: 20 21
params_lista (45)
    on left: 25 26, on right: 23 26
param (46)
    on left: 27 28 29, on right: 25 26
composto_decl (47)
    on left: 30, on right: 20 21 22 36
local_declaracoes (48)
    on left: 31 32, on right: 30 31
comando_lista (49)
    on left: 33 34, on right: 30 33
comando (50)
    on left: 35 36 37 38 39, on right: 33 42 43
expressao_decl (51)
    on left: 40 41, on right: 35
iteracao_decl (52)
    on left: 42 43, on right: 37
retorno_decl (53)
    on left: 44 45 46, on right: 38
expressao (54)
    on left: 47 48, on right: 40 42 45 47 62 74 75 78 79
expressao_simples (55)
    on left: 49 50, on right: 48
relacional (56)
    on left: 51 52 53 54 55 56, on right: 49
expressao_soma (57)
    on left: 57 58 59, on right: 49 50 57 58
termo (58)
    on left: 60 61, on right: 57 59 60
fator (59)
    on left: 62 63 64 65 66 67 68 69, on right: 60 61
ativacao (60)
    on left: 70 71, on right: 64
args (61)
    on left: 72 73, on right: 70
arg_lista (62)
    on left: 74 75, on right: 72 74
var (63)
    on left: 76 77, on right: 47 63
var_auxiliar (64)
    on left: 78 79 80, on right: 77 79


state 0

    0 $accept: . programa $end

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    STRUCT  shift, and go to state 5

    programa            go to state 6
    declaracao_lista    go to state 7
    declaracao          go to state 8
    var_declaracao      go to state 9
    tipo_especificador  go to state 10
    func_declaracao     go to state 11


state 1

   13 tipo_especificador: INT .

    $default  reduce using rule 13 (tipo_especificador)


state 2

   14 tipo_especificador: FLOAT .

    $default  reduce using rule 14 (tipo_especificador)


state 3

   15 tipo_especificador: CHAR .

    $default  reduce using rule 15 (tipo_especificador)


state 4

   16 tipo_especificador: VOID .

    $default  reduce using rule 16 (tipo_especificador)


state 5

   17 tipo_especificador: STRUCT . IDENTIFIER LEFT_BRACKET varDeclList RIGHT_BRACKET

    IDENTIFIER  shift, and go to state 12


state 6

    0 $accept: programa . $end

    $end  shift, and go to state 13


state 7

    1 programa: declaracao_lista .
    3 declaracao_lista: declaracao_lista . declaracao

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    STRUCT  shift, and go to state 5

    $default  reduce using rule 1 (programa)

    declaracao          go to state 14
    var_declaracao      go to state 9
    tipo_especificador  go to state 10
    func_declaracao     go to state 11


state 8

    2 declaracao_lista: declaracao .

    $default  reduce using rule 2 (declaracao_lista)


state 9

    5 declaracao: var_declaracao .

    $default  reduce using rule 5 (declaracao)


state 10

    6 var_declaracao: tipo_especificador . IDENTIFIER SEMICOLON
    7               | tipo_especificador . IDENTIFIER arrayDimensao SEMICOLON
    8               | tipo_especificador . SEMICOLON error
    9               | tipo_especificador . IDENTIFIER LEFT_BRACKET error RIGHT_BRACKET SEMICOLON
   20 func_declaracao: tipo_especificador . IDENTIFIER LEFT_PAREN params RIGHT_PAREN composto_decl
   21                | tipo_especificador . error LEFT_PAREN params RIGHT_PAREN composto_decl
   22                | tipo_especificador . IDENTIFIER LEFT_PAREN error RIGHT_PAREN composto_decl

    error       shift, and go to state 15
    SEMICOLON   shift, and go to state 16
    IDENTIFIER  shift, and go to state 17


state 11

    4 declaracao: func_declaracao .

    $default  reduce using rule 4 (declaracao)


state 12

   17 tipo_especificador: STRUCT IDENTIFIER . LEFT_BRACKET varDeclList RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 18


state 13

    0 $accept: programa $end .

    $default  accept


state 14

    3 declaracao_lista: declaracao_lista declaracao .

    $default  reduce using rule 3 (declaracao_lista)


state 15

   21 func_declaracao: tipo_especificador error . LEFT_PAREN params RIGHT_PAREN composto_decl

    LEFT_PAREN  shift, and go to state 19


state 16

    8 var_declaracao: tipo_especificador SEMICOLON . error

    error  shift, and go to state 20


state 17

    6 var_declaracao: tipo_especificador IDENTIFIER . SEMICOLON
    7               | tipo_especificador IDENTIFIER . arrayDimensao SEMICOLON
    9               | tipo_especificador IDENTIFIER . LEFT_BRACKET error RIGHT_BRACKET SEMICOLON
   20 func_declaracao: tipo_especificador IDENTIFIER . LEFT_PAREN params RIGHT_PAREN composto_decl
   22                | tipo_especificador IDENTIFIER . LEFT_PAREN error RIGHT_PAREN composto_decl

    LEFT_BRACKET  shift, and go to state 21
    LEFT_PAREN    shift, and go to state 22
    SEMICOLON     shift, and go to state 23

    arrayDimensao  go to state 24


state 18

   17 tipo_especificador: STRUCT IDENTIFIER LEFT_BRACKET . varDeclList RIGHT_BRACKET

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    STRUCT  shift, and go to state 5

    var_declaracao      go to state 25
    tipo_especificador  go to state 26
    varDeclList         go to state 27


state 19

   21 func_declaracao: tipo_especificador error LEFT_PAREN . params RIGHT_PAREN composto_decl

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 28
    STRUCT  shift, and go to state 5

    tipo_especificador  go to state 29
    params              go to state 30
    params_lista        go to state 31
    param               go to state 32


state 20

    8 var_declaracao: tipo_especificador SEMICOLON error .

    $default  reduce using rule 8 (var_declaracao)


state 21

    9 var_declaracao: tipo_especificador IDENTIFIER LEFT_BRACKET . error RIGHT_BRACKET SEMICOLON
   10 arrayDimensao: LEFT_BRACKET . CONSTINT RIGHT_BRACKET arrayDimensao
   11              | LEFT_BRACKET . CONSTINT RIGHT_BRACKET
   12              | LEFT_BRACKET . error RIGHT_BRACKET

    error     shift, and go to state 33
    CONSTINT  shift, and go to state 34


state 22

   20 func_declaracao: tipo_especificador IDENTIFIER LEFT_PAREN . params RIGHT_PAREN composto_decl
   22                | tipo_especificador IDENTIFIER LEFT_PAREN . error RIGHT_PAREN composto_decl

    error   shift, and go to state 35
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 28
    STRUCT  shift, and go to state 5

    tipo_especificador  go to state 29
    params              go to state 36
    params_lista        go to state 31
    param               go to state 32


state 23

    6 var_declaracao: tipo_especificador IDENTIFIER SEMICOLON .

    $default  reduce using rule 6 (var_declaracao)


state 24

    7 var_declaracao: tipo_especificador IDENTIFIER arrayDimensao . SEMICOLON

    SEMICOLON  shift, and go to state 37


state 25

   18 varDeclList: var_declaracao .
   19            | var_declaracao . varDeclList

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    STRUCT  shift, and go to state 5

    $default  reduce using rule 18 (varDeclList)

    var_declaracao      go to state 25
    tipo_especificador  go to state 26
    varDeclList         go to state 38


state 26

    6 var_declaracao: tipo_especificador . IDENTIFIER SEMICOLON
    7               | tipo_especificador . IDENTIFIER arrayDimensao SEMICOLON
    8               | tipo_especificador . SEMICOLON error
    9               | tipo_especificador . IDENTIFIER LEFT_BRACKET error RIGHT_BRACKET SEMICOLON

    SEMICOLON   shift, and go to state 16
    IDENTIFIER  shift, and go to state 39


state 27

   17 tipo_especificador: STRUCT IDENTIFIER LEFT_BRACKET varDeclList . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 40


state 28

   16 tipo_especificador: VOID .
   24 params: VOID .

    RIGHT_PAREN  reduce using rule 24 (params)
    $default     reduce using rule 16 (tipo_especificador)


state 29

   27 param: tipo_especificador . IDENTIFIER
   28      | tipo_especificador . IDENTIFIER LEFT_BRACKET RIGHT_BRACKET
   29      | tipo_especificador . IDENTIFIER error RIGHT_BRACKET

    IDENTIFIER  shift, and go to state 41


state 30

   21 func_declaracao: tipo_especificador error LEFT_PAREN params . RIGHT_PAREN composto_decl

    RIGHT_PAREN  shift, and go to state 42


state 31

   23 params: params_lista .

    $default  reduce using rule 23 (params)


state 32

   25 params_lista: param .
   26             | param . COMMA params_lista

    COMMA  shift, and go to state 43

    $default  reduce using rule 25 (params_lista)


state 33

    9 var_declaracao: tipo_especificador IDENTIFIER LEFT_BRACKET error . RIGHT_BRACKET SEMICOLON
   12 arrayDimensao: LEFT_BRACKET error . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 44


state 34

   10 arrayDimensao: LEFT_BRACKET CONSTINT . RIGHT_BRACKET arrayDimensao
   11              | LEFT_BRACKET CONSTINT . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 45


state 35

   22 func_declaracao: tipo_especificador IDENTIFIER LEFT_PAREN error . RIGHT_PAREN composto_decl

    RIGHT_PAREN  shift, and go to state 46


state 36

   20 func_declaracao: tipo_especificador IDENTIFIER LEFT_PAREN params . RIGHT_PAREN composto_decl

    RIGHT_PAREN  shift, and go to state 47


state 37

    7 var_declaracao: tipo_especificador IDENTIFIER arrayDimensao SEMICOLON .

    $default  reduce using rule 7 (var_declaracao)


state 38

   19 varDeclList: var_declaracao varDeclList .

    $default  reduce using rule 19 (varDeclList)


state 39

    6 var_declaracao: tipo_especificador IDENTIFIER . SEMICOLON
    7               | tipo_especificador IDENTIFIER . arrayDimensao SEMICOLON
    9               | tipo_especificador IDENTIFIER . LEFT_BRACKET error RIGHT_BRACKET SEMICOLON

    LEFT_BRACKET  shift, and go to state 21
    SEMICOLON     shift, and go to state 23

    arrayDimensao  go to state 24


state 40

   17 tipo_especificador: STRUCT IDENTIFIER LEFT_BRACKET varDeclList RIGHT_BRACKET .

    $default  reduce using rule 17 (tipo_especificador)


state 41

   27 param: tipo_especificador IDENTIFIER .
   28      | tipo_especificador IDENTIFIER . LEFT_BRACKET RIGHT_BRACKET
   29      | tipo_especificador IDENTIFIER . error RIGHT_BRACKET

    error         shift, and go to state 48
    LEFT_BRACKET  shift, and go to state 49

    RIGHT_PAREN  reduce using rule 27 (param)
    COMMA        reduce using rule 27 (param)


state 42

   21 func_declaracao: tipo_especificador error LEFT_PAREN params RIGHT_PAREN . composto_decl

    LEFT_BRACE  shift, and go to state 50

    composto_decl  go to state 51


state 43

   26 params_lista: param COMMA . params_lista

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    STRUCT  shift, and go to state 5

    tipo_especificador  go to state 29
    params_lista        go to state 52
    param               go to state 32


state 44

    9 var_declaracao: tipo_especificador IDENTIFIER LEFT_BRACKET error RIGHT_BRACKET . SEMICOLON
   12 arrayDimensao: LEFT_BRACKET error RIGHT_BRACKET .

    SEMICOLON  shift, and go to state 53

    SEMICOLON  [reduce using rule 12 (arrayDimensao)]


state 45

   10 arrayDimensao: LEFT_BRACKET CONSTINT RIGHT_BRACKET . arrayDimensao
   11              | LEFT_BRACKET CONSTINT RIGHT_BRACKET .

    LEFT_BRACKET  shift, and go to state 54

    $default  reduce using rule 11 (arrayDimensao)

    arrayDimensao  go to state 55


state 46

   22 func_declaracao: tipo_especificador IDENTIFIER LEFT_PAREN error RIGHT_PAREN . composto_decl

    LEFT_BRACE  shift, and go to state 50

    composto_decl  go to state 56


state 47

   20 func_declaracao: tipo_especificador IDENTIFIER LEFT_PAREN params RIGHT_PAREN . composto_decl

    LEFT_BRACE  shift, and go to state 50

    composto_decl  go to state 57


state 48

   29 param: tipo_especificador IDENTIFIER error . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 58


state 49

   28 param: tipo_especificador IDENTIFIER LEFT_BRACKET . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 59


state 50

   30 composto_decl: LEFT_BRACE . local_declaracoes comando_lista RIGHT_BRACE

    $default  reduce using rule 32 (local_declaracoes)

    local_declaracoes  go to state 60


state 51

   21 func_declaracao: tipo_especificador error LEFT_PAREN params RIGHT_PAREN composto_decl .

    $default  reduce using rule 21 (func_declaracao)


state 52

   26 params_lista: param COMMA params_lista .

    $default  reduce using rule 26 (params_lista)


state 53

    9 var_declaracao: tipo_especificador IDENTIFIER LEFT_BRACKET error RIGHT_BRACKET SEMICOLON .

    $default  reduce using rule 9 (var_declaracao)


state 54

   10 arrayDimensao: LEFT_BRACKET . CONSTINT RIGHT_BRACKET arrayDimensao
   11              | LEFT_BRACKET . CONSTINT RIGHT_BRACKET
   12              | LEFT_BRACKET . error RIGHT_BRACKET

    error     shift, and go to state 61
    CONSTINT  shift, and go to state 34


state 55

   10 arrayDimensao: LEFT_BRACKET CONSTINT RIGHT_BRACKET arrayDimensao .

    $default  reduce using rule 10 (arrayDimensao)


state 56

   22 func_declaracao: tipo_especificador IDENTIFIER LEFT_PAREN error RIGHT_PAREN composto_decl .

    $default  reduce using rule 22 (func_declaracao)


state 57

   20 func_declaracao: tipo_especificador IDENTIFIER LEFT_PAREN params RIGHT_PAREN composto_decl .

    $default  reduce using rule 20 (func_declaracao)


state 58

   29 param: tipo_especificador IDENTIFIER error RIGHT_BRACKET .

    $default  reduce using rule 29 (param)


state 59

   28 param: tipo_especificador IDENTIFIER LEFT_BRACKET RIGHT_BRACKET .

    $default  reduce using rule 28 (param)


state 60

   30 composto_decl: LEFT_BRACE local_declaracoes . comando_lista RIGHT_BRACE
   31 local_declaracoes: local_declaracoes . var_declaracao

    error        shift, and go to state 62
    WHILE        shift, and go to state 63
    RETURN       shift, and go to state 64
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    CHAR         shift, and go to state 3
    VOID         shift, and go to state 4
    STRUCT       shift, and go to state 5
    LEFT_BRACE   shift, and go to state 50
    LEFT_PAREN   shift, and go to state 65
    SEMICOLON    shift, and go to state 66
    CONSTINT     shift, and go to state 67
    CONSTFLOAT   shift, and go to state 68
    CONSTCHAR    shift, and go to state 69
    CONSTSTRING  shift, and go to state 70
    IDENTIFIER   shift, and go to state 71

    RIGHT_BRACE  reduce using rule 34 (comando_lista)

    var_declaracao      go to state 72
    tipo_especificador  go to state 26
    composto_decl       go to state 73
    comando_lista       go to state 74
    comando             go to state 75
    expressao_decl      go to state 76
    iteracao_decl       go to state 77
    retorno_decl        go to state 78
    expressao           go to state 79
    expressao_simples   go to state 80
    expressao_soma      go to state 81
    termo               go to state 82
    fator               go to state 83
    ativacao            go to state 84
    var                 go to state 85


state 61

   12 arrayDimensao: LEFT_BRACKET error . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 86


state 62

   39 comando: error . SEMICOLON
   58 expressao_soma: error . expressao_soma

    error        shift, and go to state 87
    LEFT_PAREN   shift, and go to state 65
    SEMICOLON    shift, and go to state 88
    CONSTINT     shift, and go to state 67
    CONSTFLOAT   shift, and go to state 68
    CONSTCHAR    shift, and go to state 69
    CONSTSTRING  shift, and go to state 70
    IDENTIFIER   shift, and go to state 71

    expressao_soma  go to state 89
    termo           go to state 82
    fator           go to state 83
    ativacao        go to state 84
    var             go to state 90


state 63

   42 iteracao_decl: WHILE . LEFT_PAREN expressao RIGHT_PAREN comando
   43              | WHILE . LEFT_PAREN error RIGHT_PAREN comando

    LEFT_PAREN  shift, and go to state 91


state 64

   44 retorno_decl: RETURN . SEMICOLON
   45             | RETURN . expressao SEMICOLON
   46             | RETURN . error SEMICOLON

    error        shift, and go to state 92
    LEFT_PAREN   shift, and go to state 65
    SEMICOLON    shift, and go to state 93
    CONSTINT     shift, and go to state 67
    CONSTFLOAT   shift, and go to state 68
    CONSTCHAR    shift, and go to state 69
    CONSTSTRING  shift, and go to state 70
    IDENTIFIER   shift, and go to state 71

    expressao          go to state 94
    expressao_simples  go to state 80
    expressao_soma     go to state 81
    termo              go to state 82
    fator              go to state 83
    ativacao           go to state 84
    var                go to state 85


state 65

   62 fator: LEFT_PAREN . expressao RIGHT_PAREN
   69      | LEFT_PAREN . error RIGHT_PAREN

    error        shift, and go to state 95
    LEFT_PAREN   shift, and go to state 65
    CONSTINT     shift, and go to state 67
    CONSTFLOAT   shift, and go to state 68
    CONSTCHAR    shift, and go to state 69
    CONSTSTRING  shift, and go to state 70
    IDENTIFIER   shift, and go to state 71

    expressao          go to state 96
    expressao_simples  go to state 80
    expressao_soma     go to state 81
    termo              go to state 82
    fator              go to state 83
    ativacao           go to state 84
    var                go to state 85


state 66

   41 expressao_decl: SEMICOLON .

    $default  reduce using rule 41 (expressao_decl)


state 67

   65 fator: CONSTINT .

    $default  reduce using rule 65 (fator)


state 68

   66 fator: CONSTFLOAT .

    $default  reduce using rule 66 (fator)


state 69

   67 fator: CONSTCHAR .

    $default  reduce using rule 67 (fator)


state 70

   68 fator: CONSTSTRING .

    $default  reduce using rule 68 (fator)


state 71

   70 ativacao: IDENTIFIER . LEFT_PAREN args RIGHT_PAREN
   71         | IDENTIFIER . LEFT_PAREN error RIGHT_PAREN
   76 var: IDENTIFIER .
   77    | IDENTIFIER . var_auxiliar

    LEFT_BRACKET  shift, and go to state 97
    LEFT_PAREN    shift, and go to state 98

    $default  reduce using rule 76 (var)

    var_auxiliar  go to state 99


state 72

   31 local_declaracoes: local_declaracoes var_declaracao .

    $default  reduce using rule 31 (local_declaracoes)


state 73

   36 comando: composto_decl .

    $default  reduce using rule 36 (comando)


state 74

   30 composto_decl: LEFT_BRACE local_declaracoes comando_lista . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 100


state 75
